<resources>
    <string name="app_name">IndoorFit</string>
    <string name="start_btn">START</string>
    <string name="slogan">Workout and get fit at home</string>
    <string name="_zero">0</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="your_height_in_cm">Your Height in Cm</string>
    <string name="your_weight_in_kg">Your Weight in Kg</string>
    <string name="your_result">Your Result</string>
    <string name="weight_value">weight</string>
    <string name="height_value">height</string>
    <string name="calculate">Calculate</string>
    <string name="weight">Weight</string>
    <string name="cm">cm</string>
    <string name="height">Height</string>
    <string name="bmi">BMI</string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>
    <string name="imperial_units">Imperial Units</string>
    <string name="metric_units">Metric Units</string>
    <string name="ft">ft</string>
    <string name="in">in</string>
    <string name="full_body_activity">Full Body Workout</string>
    <string name="abs_activity">ABS Workout</string>
    <string name="arm_chest_activity"><![CDATA[ARM & CHEST Workout]]></string>
    <string name="shoulder_back_activity"><![CDATA[SHOULDER & BACK Workout]]></string>
    <string name="leg_activity">LEG Workout</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="home">Home</string>
    <string name="next_button">Next</string>
    <string name="sp1_quotes"><![CDATA[Make Suitable\n Workouts &\n Great Results]]></string>
    <string name="sp2_quotes">Let\'s do a workout\n and live healthy\n with us</string>
    <string name="enter_e_mail_address">Enter E-mail Address</string>
    <string name="sign_in">Sign in</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="google">Google</string>
    <string name="enter_password">Enter password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="e_mail">e-mail</string>
    <string name="re_type_password">re-type password</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="workout">Workout</string>
    <string name="nutrition">Nutrition</string>
    <string name="step_counter">Step Counter</string>
    <string name="profile">Profile</string>
    <string name="featured_workout">Featured Workout</string>
    <string name="step_counter_activity">Step Counter Activity</string>
    <string name="workout_activity">Workout Activity</string>
    <string name="_0">0</string>
    <string name="today_s_distance_covered">Today\'s Distance Covered</string>
    <string name="today_s_burnt_calories">Today\'s Burnt Calories</string>
    <string name="steps_count">Steps Count</string>
    <string name="back_button">backButton</string>
    <string name="todo">TODO</string>
    <string name="workoutBack">workoutBack</string>
    <string name="what_do_you_want_to_train">What do You Want to Train?</string>
    <string name="fullBody">FULLBODY</string>
    <string name="abs">ABS</string>
    <string name="arm_chest"><![CDATA[ARM & CHEST]]></string>
    <string name="shoulder_back"><![CDATA[SHOULDER & BACK]]></string>
    <string name="leg">LEG</string>
    <string name="_11_exercise_30min">11 Exercise | 30min</string>
    <string name="view_more">View more</string>
    <string name="full_body_description">fullbody_description</string>
    <string name="abs_description">abs_description</string>
    <string name="shoulder_back_description">shoulderback_description</string>
    <string name="arm_chest_description">armchest_description</string>
    <string name="leg_description">leg_description</string>
    <string name="push_ups">Push-Ups</string>
    <string name="x_3_30s_each_round">x 3 | 30s each round</string>
    <string name="view_more_full_body_workout">View More Full Body Workout</string>
    <string name="view_more_abs_workout">View More Abs Workout</string>
    <string name="view_more_arm_chest_workout"><![CDATA[View More Arm & Chest Workout]]></string>
    <string name="view_more_shoulder_back_workout"><![CDATA[View More Shoulder & Back Workout]]></string>
    <string name="view_more_leg_workout">View More Leg Workout</string>
    <string name="close_button">close_button</string>
    <string name="bicycle_crunches">bicycle_crunches</string>
    <string name="close">close</string>
    <string-array name="fullBody_workout_names">
        <item>Push-Ups</item>
        <item>Squats</item>
        <item>Lunges</item>
        <item>Plank</item>
        <item>Burpees</item>
        <item>Mountain Climbers</item>
        <item>Jumping Jacks</item>
        <item>High Knees</item>
        <item>Russian Twists</item>
        <item>Bicycle Crunches</item>
    </string-array>
    <string name="posePushUps">
    Step 1: Start in the push-up position with your arms completely straight and directly beneath your shoulders.\n\n
    Step 2: Your body should form a straight line from your shoulders to your ankles.\n\n
    Step 3: Squeeze your abs, lift one foot off the floor and bring your knee up towards your chest while keeping your body in as straight of a line as possible.\n\n
    Step 4: Return to the starting position and repeat the movement with your opposite leg.
</string>
    <string name="poseSquats">
    Step 1: Stand with your feet shoulder-width apart.\n\n
    Step 2: Lower your body by bending your knees and pushing your hips back, as if sitting down on an imaginary chair.\n\n
    Step 3: Keep your back straight and your chest up.\n\n
    Step 4: Push through your heels to return to the starting position.
</string>
    <string name="poseLunges">
    Step 1: Start by standing with your feet together.\n\n
    Step 2: Take a step forward with one leg and lower your body until both knees are bent at 90-degree angles.\n\n
    Step 3: Push off the front foot to return to the starting position.\n\n
    Step 4: Repeat with the opposite leg.
</string>
    <string name="posePlank">
    Step 1: Begin in a push-up position with your arms extended and hands beneath your shoulders.\n\n
    Step 2: Keep your body in a straight line from head to heels, engaging your core muscles.\n\n
    Step 3: Hold this position for the desired duration, keeping your abs and glutes tight.
</string>
    <string name="poseBurpees">
    Step 1: Start by standing with your feet shoulder-width apart.\n\n
    Step 2: Drop into a squat position and place your hands on the floor in front of you.\n\n
    Step 3: Kick your feet back into a push-up position.\n\n
    Step 4: Perform a push-up.\n\n
    Step 5: Jump your feet back to the squat position.\n\n
    Step 6: Explosively jump up into the air, reaching your arms overhead.
</string>
    <string name="poseMountainClimbers">
    Step 1: Begin in a push-up position with your arms extended and hands beneath your shoulders.\n\n
    Step 2: Drive one knee toward your chest while keeping your hips down and your core engaged.\n\n
    Step 3: Quickly switch legs in a running motion, alternating knees.
</string>
    <string name="poseJumpingJacks">
    Step 1: Start by standing with your feet together and arms at your sides.\n\n
    Step 2: Jump your feet out wide as you simultaneously raise your arms overhead.\n\n
    Step 3: Jump your feet back together and return your arms to your sides.
</string>
    <string name="poseHighKnees">
    Step 1: Stand with your feet hip-width apart.\n\n
    Step 2: Lift your right knee towards your chest, aiming to get it as high as possible.\n\n
    Step 3: Lower your right leg and immediately lift your left knee.\n\n
    Step 4: Continue alternating legs, as if running in place while lifting your knees.
</string>
    <string name="poseRussianTwists">
    Step 1: Sit on the floor with your knees bent and feet flat.\n\n
    Step 2: Lean back slightly, keeping your back straight and core engaged.\n\n
    Step 3: Clasp your hands together in front of you and twist your torso to the right, then to the left.\n\n
    Step 4: Keep your feet off the ground for an added challenge.
</string>
    <string name="poseBicycleCrunches">
    Step 1: Lie on your back with your hands behind your head and knees lifted, forming a 90-degree angle.\n\n
    Step 2: Bring your right elbow and left knee towards each other while extending your right leg out.\n\n
    Step 3: Switch sides by bringing your left elbow and right knee towards each other while extending your left leg out.\n\n
    Step 4: Continue alternating sides in a pedaling motion.
</string>
    <string-array name="abs_workout_names">
        <item>Crunches</item>
        <item>Reverse Crunches</item>
        <item>Plank</item>
        <item>Bicycle Crunches</item>
        <item>Russian Twists</item>
        <item>Leg Raises</item>
        <item>Scissor Kicks</item>
    </string-array>
    <string name="poseCrunches">
    Step 1: Lie on your back with your knees bent and feet flat on the floor.\n\n
    Step 2: Place your hands behind your head, but avoid pulling on your neck.\n\n
    Step 3: Curl your upper body off the floor and towards your knees, engaging your abdominal muscles.\n\n
    Step 4: Lower your body back down and repeat.
</string>
    <string name="poseReverseCrunches">
    Step 1: Lie on your back with your legs extended and your hands by your sides or under your hips for support.\n\n
    Step 2: Lift your legs off the ground while keeping them straight.\n\n
    Step 3: Curl your knees towards your chest by lifting your hips off the ground.\n\n
    Step 4: Lower your legs back down to the starting position.
</string>
    <string name="posePlankAbs">
    Step 1: Begin in a push-up position, but with your weight on your forearms instead of your hands.\n\n
    Step 2: Keep your body in a straight line from head to heels.\n\n
    Step 3: Engage your core and hold this position for the desired duration.
</string>
    <string name="poseInchworms">
    Step 1: Stand with your feet hip-width apart.\n\n
    Step 2: Bend at your waist and place your hands on the ground.\n\n
    Step 3: Walk your hands forward until you\'re in a plank position.\n\n
    Step 4: Take small steps with your feet toward your hands, returning to the bent-over position.\n\n
    Step 5: Stand up straight and repeat the movement.
</string>
    <string name="start">START</string>
    <string name="_01_00">01:00</string>
    <string name="how_to_do_this">How To Do This</string>
    <string name="watch_on_youtube">Watch on YouTube</string>
    <string name="video_button">Video Button</string>
    <string name="inchworms">Inchworms</string>
    <string name="nutrition_facts">Nutrition Facts</string>
    <string name="_100_gram">100 gram</string>
    <string name="turkey">Turkey</string>
    <string name="turkey_calorie">135 Kcal</string>
    <string name="turkey_protein">30 g</string>
    <string name="turkey_carbs">0 g</string>
    <string name="turkey_fat">1 g</string>
    <string name="calories">Calories</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="colon">:</string>
    <string name="health_benefits_of_turkey">Health Benefits of Turkey</string>
    <string name="turkey_details">Skinless turkey breast is a lean protein that aids in muscle maintenance and supports heart health by being low in saturated fat.</string>
</resources>