<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menuStep"
        android:icon="@drawable/ic_step"
        android:title="@string/step_counter"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menuWorkout"
        android:icon="@drawable/ic_workout"
        android:title="@string/workout"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/menuNutrition"
        android:icon="@drawable/ic_nutrition"
        android:title="@string/nutrition"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menuProfile"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"
        app:showAsAction="always"
        />


</menu>