<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/left_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/rectangle_back"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/back_button"
        android:padding="5dp"
        android:src="@drawable/back" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:src="@drawable/sb_inchworms"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/gifImageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <Button
                android:layout_marginTop="35dp"
                android:id="@+id/time"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:text="@string/_01_00"
                android:layout_gravity="center"
                android:textSize="28sp"
                android:padding="15dp"
                android:background="@drawable/button_bg_round"/>
            <Button
                android:id="@+id/startButton"
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_bg"
                android:text="@string/start"
                android:textColor="@color/white"
                android:textSize="28sp"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inchworms"
                android:textSize="32sp"
                android:fontFamily="@font/seguisb"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"/>


            <Button
                android:id="@+id/watch_on_youtube_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableStart="@drawable/videocam"
                android:drawablePadding="8dp"
                android:text="@string/watch_on_youtube"
                android:contentDescription="@string/video_button" />

            <TextView
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textAlignment="center"
                android:text="@string/how_to_do_this"
                android:textColor="#686060"
                android:textSize="25sp"
                android:padding="7dp"
                android:textStyle="bold"
                android:background="@drawable/button_dsc"
                android:layout_gravity="center"/>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="20dp"
                android:background="#C8CCBB"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView

                        android:padding="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#ecede8"
                        android:text="@string/poseInchworms"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>


                </LinearLayout>


            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </ScrollView>


</RelativeLayout>
