<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <ImageView
        android:id="@+id/left_button"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle_back"
        android:contentDescription="@string/back_button"
        android:padding="5dp"
        android:src="@drawable/back" />

    <ImageView
        android:id="@+id/gifImageView"
        android:layout_width="@dimen/_210sdp"
        android:layout_height="@dimen/_200sdp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_nutrition"
        android:src="@drawable/turkey" />

    <TextView
        android:id="@+id/fruitName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turkey"
        android:layout_below="@+id/gifImageView"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/seguisbi"/>

    <View
        android:id="@+id/view_offset_helper"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/fruitName"
        android:background="#707070" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/view_offset_helper">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/seguisb"
                android:text="@string/nutrition_facts"
                android:textColor="@color/black"
                android:textSize="25sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/segoeui"
                android:text="@string/_100_gram"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                app:cardBackgroundColor="#F06292"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:fontFamily="@font/seguisb"
                        android:padding="8dp"
                        android:text="@string/calories"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:padding="8dp"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/seguisb"
                        android:text="@string/turkey_calorie"
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#4DB6AC"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:fontFamily="@font/seguisb"
                        android:padding="8dp"
                        android:text="@string/protein"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:padding="8dp"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/seguisb"
                        android:text="@string/turkey_protein"
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#64B5F6"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:fontFamily="@font/seguisb"
                        android:padding="8dp"
                        android:text="@string/carbohydrates"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:padding="8dp"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/seguisb"
                        android:text="@string/turkey_carbs"
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#FFAB91"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.6"
                        android:fontFamily="@font/seguisb"
                        android:padding="8dp"
                        android:text="@string/fat"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.4"
                        android:padding="8dp"
                        android:text="@string/colon"
                        android:textColor="@color/black"
                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/seguisb"
                        android:text="@string/turkey_fat"
                        android:textAlignment="center"
                        android:textColor="@color/white" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="305dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textAlignment="center"
                android:text="@string/health_benefits_of_turkey"
                android:textColor="#686060"
                android:textSize="25sp"
                android:padding="7dp"
                android:background="@drawable/button_dsc"
                android:layout_gravity="center"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardBackgroundColor="#E0F2F1"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:textAllCaps="false"
                    android:text="@string/turkey_details"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:gravity="center_horizontal"
                    android:fontFamily="@font/segoeui"/>

            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>
